--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
         <title>Vivien Vincze Fotografin</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/flexslider.css" rel="stylesheet" type="text/css" media="all"/>
-        <link href="css/skeleton.css" rel="stylesheet" type="text/css" media="all"/>
- 		<link href="css/base.css" rel="stylesheet" type="text/css" media="all"/>
-		<link href="css/main.css" rel="stylesheet" type="text/css" media="all"/>
-		<link href="css/font.css" rel="stylesheet" type="text/css">
-		<link href="css/fontello.css" rel="stylesheet" type="text/css"> 
-		<link href="css/themify-icons.css" rel="stylesheet" type="text/css">
-		<link href="css/cookie.css" rel="stylesheet" type="text/css">
+        <link href="./css/flexslider.css" rel="stylesheet" type="text/css" media="all"/>
+        <link href="./css/skeleton.css" rel="stylesheet" type="text/css" media="all"/>
+ 		<link href="./css/base.css" rel="stylesheet" type="text/css" media="all"/>
+		<link href="./css/main.css" rel="stylesheet" type="text/css" media="all"/>
+		<link href="./css/font.css" rel="stylesheet" type="text/css">
+		<link href="./css/fontello.css" rel="stylesheet" type="text/css"> 
+		<link href="./css/themify-icons.css" rel="stylesheet" type="text/css">
+		<link href="./css/cookie.css" rel="stylesheet" type="text/css">
         <!--[if gte IE 9]>
         	<link rel="stylesheet" type="text/css" href="css/ie9.css" />
 		<![endif]-->
@@ -119,12 +119,12 @@
 	  Okay
 	</button>
 </div>
-<script src="js/jquery-1.11.3.min.js" type="text/javascript"></script>		
-<script src="js/jquery.flexslider-min.js" type="text/javascript"></script>
-<script src="js/venobox.min.js" type="text/javascript"></script>
-<script src="js/masonry.min.js" type="text/javascript"></script>
-<script src="js/spectragram.min.js" type="text/javascript"></script>
-<script src="js/modernizr.js" type="text/javascript"></script>
-<script src="js/script.js" type="text/javascript"></script>
+<script src="./js/jquery-1.11.3.min.js" type="text/javascript"></script>		
+<script src="./js/jquery.flexslider-min.js" type="text/javascript"></script>
+<script src="./js/venobox.min.js" type="text/javascript"></script>
+<script src="./js/masonry.min.js" type="text/javascript"></script>
+<script src="./js/spectragram.min.js" type="text/javascript"></script>
+<script src="./js/modernizr.js" type="text/javascript"></script>
+<script src="./js/script.js" type="text/javascript"></script>
 </body>
 </html>
